--- a/index.html
+++ b/index.html
@@ -151,26 +151,26 @@
       <p class="stack-title text-primary">Experto</p>
       <span class="badge badge-experto">C#</span>
       <span class="badge badge-experto">VB.NET</span>
-      <span class="badge badge-experto">SQL</span>
-      <span class="badge badge-experto">JavaScript</span>
-      <span class="badge badge-experto">JSON</span>
-      <span class="badge badge-experto">Bootstrap</span>
-      <span class="badge badge-experto">jQuery</span>
+      <span class="badge badge-experto">SQL</span>      
       <span class="badge badge-experto">Entity Framework</span>
       <span class="badge badge-experto">Entity Framework Core</span>
     </div>
 
     <div class="stack-group">
       <p class="stack-title text-secondary">Medio</p>
-      <span class="badge badge-medio">Java</span>
-      <span class="badge badge-medio">Python</span>
-      <span class="badge badge-medio">Git / GitHub</span>
+      <span class="badge badge-medio">JavaScript</span>
+      <span class="badge badge-medio">JSON</span>
+      <span class="badge badge-medio">Bootstrap</span>
+      <span class="badge badge-medio">jQuery</span>
+      <span class="badge badge-basico">Node.js</span>
     </div>
 
     <div class="stack-group">
       <p class="stack-title text-muted">Básico</p>
-      <span class="badge badge-basico">Node.js</span>
+      <span class="badge badge-basico">Java</span>
+      <span class="badge badge-basico">Python</span>      
       <span class="badge badge-basico">React</span>
+      <span class="badge badge-basico">Angular</span>
     </div>
   </div>
 
