--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <span class="badge badge-medio">JSON</span>
       <span class="badge badge-medio">Bootstrap</span>
       <span class="badge badge-medio">jQuery</span>
-      <span class="badge badge-basico">Node.js</span>
+      <span class="badge badge-medio">Node.js</span>
     </div>
 
     <div class="stack-group">
