--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Marcos Hernández – Portafolio</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -209,6 +210,7 @@
       <div class="mb-3">
         <textarea name="mensaje" class="form-control" placeholder="Escribe tu mensaje aquí" rows="4" required></textarea>
       </div>
+      <div class="g-recaptcha mb-3" data-sitekey="6LdLemMrAAAAAKFqGyHxE9D7bTHZNG3xPcTe3K6l"></div>
       <button type="submit" class="btn btn-primary">Enviar mensaje</button>
     </form>
     <a href="https://www.linkedin.com/in/marcoshernandezalvarez/" target="_blank" class="btn btn-outline-primary btn-lg btn-linkedin">
