--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="section">
     <h2 class="section-title">💼 Servicios Freelance</h2>
     <ul>
-      <li><strong>Desarrollo y mantenimiento de aplicaciones web</strong> en .NET, Java, o Python</li>
+      <li><strong>Desarrollo y mantenimiento de aplicaciones web</strong> en .NET o Python</li>
       <li><strong>Migración de sistemas</strong> desde versiones antiguas a plataformas modernas (.NET Core)</li>
       <li><strong>Automatización de procesos</strong> y generación de reportes</li>
       <li><strong>Integraciones con APIs externas</strong> y servicios cloud (Azure, GCP)</li>
